--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quize Test Series</title>
-    <link rel="stylesheet" href="Quiz Test.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="quiz-container" id="quiz">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <script src="Quiz Test.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
